[gd_scene load_steps=5 format=3 uid="uid://d324awvm2boeg"]

[ext_resource type="Script" uid="uid://d161eemr20v38" path="res://Componentes/Bullets/PlayerBullet.gd" id="1_l40bo"]
[ext_resource type="SpriteFrames" uid="uid://dm6h2s1d6kdd" path="res://Utilidades/Bullets.tres" id="2_wwlr8"]
[ext_resource type="AudioStream" uid="uid://ce5jm4cji0b6a" path="res://Audio/SFX/NES - Commando - Sound Effects/Commando SFX (2).wav" id="3_wwlr8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uumvb"]
size = Vector2(2, 2)

[node name="Bullet" type="Area2D"]
collision_layer = 0
collision_mask = 13
script = ExtResource("1_l40bo")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 0)
sprite_frames = ExtResource("2_wwlr8")
animation = &"bullet"
frame = 6
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
visible = false
shape = SubResource("RectangleShape2D_uumvb")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(2.38419e-07, 2.38419e-07)
scale = Vector2(0.1, 0.1)

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="SFXEnemyDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_wwlr8")
volume_db = -16.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
